# POUK

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/lab1/lib/lab1/: listener  talker
install/lab1/share/ament_index/resource_index/package_run_dependencies/: lab1
install/lab1/share/ament_index/resource_index/parent_prefix_path/: lab1
install/lab1/share/lab1/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/lab1/share/lab1/cmake/: lab1Config-version.cmake  lab1Config.cmake
install/lab1/share/lab1/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build  latest_list
src/lab1/: CMakeLists.txt  README.md
src/lab1/src/: listener_node.cpp  talker_node.cpp
src/lab2/: CMakeLists.txt  README.md  package.xml
src/lab2/launch/: start.launch.py
src/lab2/src/: alg1.cpp  alg2.cpp  robot_control.cpp
src/lab3/: CMakeLists.txt  README.md  package.xml
src/lab3/include/lab3/: line_control.h
src/lab3/launch/: circle.launch.py  launch.circle.py  launch.line.py  launch.oval.py  line.launch.py  oval.launch.py
src/lab3/src/: line_control.cpp  line_control_node.cpp
src/lab4/: CMakeLists.txt  README.md  package.xml
src/lab4/config/: selector_params.yaml
src/lab4/include/lab4/: control.hpp  control_selector.hpp  dummy_control.hpp  voyager_control.hpp  wallfollower_control.hpp
src/lab4/launch/: start.launch.py
src/lab4/src/: control_selector.cpp  control_selector_node.cpp  dummy_control.cpp  selector_node.cpp  voyager_control.cpp  wallfollower_control.cpp
src/lab5/: CMakeLists.txt  README.md  package.xml
src/lab5/config/: config.rviz  mapper_params.yaml
src/lab5/include/lab5/: mapper.h
src/lab5/launch/: start.launch.py
src/lab5/src/: mapper.cpp  simple_map_node.cpp
src/lab6/: CMakeLists.txt  README.md  package.xml
src/lab6/config/: amcl_params.yaml  nav2_params.yaml  navi.rviz  slam_config.yaml
src/lab6/include/lab6/: patrol_bot.h
src/lab6/launch/: navi.launch.py  navigation.launch.py  navigation_amcl.launch.py
src/lab6/maps/: map.pgm  map.yaml
src/lab6/src/: patrol_bot.cpp  patrol_bot_node.cpp
